--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ bs4==0.0.1
 certifi==2021.5.30
 chardet==4.0.0
 idna==2.10
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 python-http-client==3.3.2
 redis==3.5.3
 requests==2.25.1
